nav 요소 id 속성 값으로 "gnb" 설정

--- a/src/html/common/_header.html
+++ b/src/html/common/_header.html
@@ -1,7 +1,7 @@
 <header>
 		<h1 lang="en">jQuery Plugin StartKit ─ Gulp Project</h1>
 	</header>
-	<nav>
+	<nav id="gnb">
 		<ul>
 			<li><a href="mainPage.html">mainPage</a></li>
 			<li><a href="subPage.html">subPage</a></li>
