--- a/src/html/common/_header.html
+++ b/src/html/common/_header.html
@@ -3,7 +3,37 @@
 	</header>
 	<nav id="gnb">
 		<ul>
-			<li><a href="mainPage.html">mainPage</a></li>
-			<li><a href="subPage.html">subPage</a></li>
+			<li>
+				<a href="">철학</a>
+				<ul>
+					<li><a href="">다음카카오의 철학</a></li>
+					<li><a href="">프라이버시 보호 책임자</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="">투명성</a>
+				<ul>
+					<li><a href="">개인정보 라이프 사이클</a></li>
+					<li><a href="">투명성 보고서</a></li>
+					<li>
+						<a href="">op</a>
+						<ul>
+							<li><a href="">야무.</a></li>
+							<li><a href="">청춘아!!</a></li>
+						</ul>
+					</li>
+				</ul>
+			</li>
+			<li>
+				<a href="">보호노력</a>
+				<ul>
+					<li><a href="">기술적 보호노력</a></li>
+					<li><a href="">프라이버시 정책 자문위원회</a></li>
+					<li><a href="">정보보호 인증</a></li>
+				</ul>
+			</li>
+			<li>
+				<a href="">동향</a>
+			</li>
 		</ul>
 	</nav>
