데모 페이지 제작을 위한 페이지, 테마 수정 및 플러그인 수정

--- a/src/html/common/_header.html
+++ b/src/html/common/_header.html
@@ -1,32 +1,35 @@
-<header>
-		<h1 lang="en">jQuery Plugin StartKit ─ Gulp Project</h1>
+<header role="banner">
+		<div class="container">
+			<h1 lang="en"><a href="">daumkakao 프라이버시 정책 메인메뉴</a></h1>
+			<nav id="gnb">
+				<h2 class="a11y-hidden">daumkakao 프라이버시 정책 메인메뉴</h2>
+				<ul>
+					<li>
+						<a href="">철학</a>
+						<ul>
+							<li><a href="">다음카카오의 철학</a></li>
+							<li><a href="">프라이버시 보호 책임자</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="">투명성</a>
+						<ul>
+							<li><a href="">개인정보 라이프 사이클</a></li>
+							<li><a href="">투명성 보고서</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="">보호노력</a>
+						<ul>
+							<li><a href="">기술적 보호노력</a></li>
+							<li><a href="">프라이버시 정책 자문위원회</a></li>
+							<li><a href="">정보보호 인증</a></li>
+						</ul>
+					</li>
+					<li>
+						<a href="">동향</a>
+					</li>
+				</ul>
+			</nav>
+		</div>
 	</header>
-	<nav id="gnb">
-		<ul>
-			<li>
-				<a href="">철학</a>
-				<ul>
-					<li><a href="">다음카카오의 철학</a></li>
-					<li><a href="">프라이버시 보호 책임자</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="">투명성</a>
-				<ul>
-					<li><a href="">개인정보 라이프 사이클</a></li>
-					<li><a href="">투명성 보고서</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="">보호노력</a>
-				<ul>
-					<li><a href="">기술적 보호노력</a></li>
-					<li><a href="">프라이버시 정책 자문위원회</a></li>
-					<li><a href="">정보보호 인증</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="">동향</a>
-			</li>
-		</ul>
-	</nav>
