--- a/src/html/mainPage.html
+++ b/src/html/mainPage.html
@@ -7,8 +7,10 @@
 </head>
 <body>
 	<!--#include file="common/_header.html" -->
-	<main>
-		<h1>Main Page</h1>
-	</main>
+	<!-- <main>
+		<div class="container">
+			<h1>Main Page</h1>
+		</div>
+	</main> -->
 </body>
 </html>
