--- a/src/html/subPage.html
+++ b/src/html/subPage.html
@@ -8,7 +8,9 @@
 <body>
 	<!--#include file="common/_header.html" -->
 	<main>
-		<h1>Sub Page</h1>
+		<div class="container">
+			<h1>Sub Page</h1>
+		</div>
 	</main>
 </body>
 </html>
